Create the wishlist

--- a/DigitalMarket/Views/_ViewImports.cshtml
+++ b/DigitalMarket/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using DigitalMarket.Models.Entities
 @using DigitalMarket.Models.ViewModels
+@using DigitalMarket.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, DigitalMarket.TagHelpers
