--- a/DigitalMarket/Views/Shared/ProductSummary.cshtml
+++ b/DigitalMarket/Views/Shared/ProductSummary.cshtml
@@ -8,12 +8,17 @@
         <button class="badge bg-warning">
             X
         </button>
-        <a class="card-title" href="#">@Model.ProductName</a> <br />
-        <span class="card-text p-1">
-            <button type="submit" class="btn btn-outline-success btn-sm pull-right" style="float:right">
-                В корзину
-            </button>
-            @Model.Description
-        </span>
+        <a class="card-title" href="#">@Model.ProductName</a>
+
+        <form id="@Model.ProductID" asp-action="AddToWishlist" asp-controller="Wishlist" method="post">
+            <input type="hidden" asp-for="ProductID" />
+            <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
+            <span class="card-text p-1">
+                <button type="submit" class="btn btn-outline-success btn-sm pull-right" style="float:right">
+                    В желаемое
+                </button>
+                @Model.Description
+            </span>
+        </form>
     </div>
 </div>
